// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<WithStyles(ForwardRef(ListItem))
  button={true}
  className=""
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemText))
    primary="Title"
  />
</WithStyles(ForwardRef(ListItem))>
`;

exports[`renders correctly disabled 1`] = `
<WithStyles(ForwardRef(ListItem))
  button={true}
  className="makeStyles-isDisabled-1"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemText))
    primary="Title"
  />
</WithStyles(ForwardRef(ListItem))>
`;

exports[`renders correctly with icon 1`] = `
<WithStyles(ForwardRef(ListItem))
  button={true}
  className=""
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemIcon))>
    <AccessAlarmIcon />
  </WithStyles(ForwardRef(ListItemIcon))>
  <WithStyles(ForwardRef(ListItemText))
    primary="Title"
  />
</WithStyles(ForwardRef(ListItem))>
`;
